force-app/main/default/objects/Email_SMS_Log__c/Email_SMS_Log__c.object-meta.xml
<CustomObject>
    <description>Change Request - ICF - List of survey participants. Get from IDAS core system / CCC (Case)</description>
    <label>Email &amp; SMS Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Email &amp; SMS Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email &amp; SMS Log</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>