force-app/main/default/objects/Email_SMS_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>