force-app/main/default/objects/Email_SMS_Log__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <formula>Case__r.CreatedBy.FirstName &amp; &quot; &quot; &amp; Case__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>