force-app/main/default/objects/Email_SMS_Log__c/fields/All_Status_Jatis__c.field-meta.xml
<CustomField>
    <fullName>All_Status_Jatis__c</fullName>
    <formula>IF ( ISBLANK(Status_JATIS__c), &quot;Not Send to Jatis&quot;,
IF ( ISBLANK(Status_Deliver__c),  Description_Status_JATIS__c &amp; &quot; - Pending From Jatis&quot;,
&quot;Completed - &quot; &amp; Description_Status_JATIS__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Status Jatis</label>
    <type>Text</type>
</CustomField>