force-app/main/default/objects/Email_SMS_Log__c/fields/Bitly__c.field-meta.xml
<CustomField>
    <fullName>Bitly__c</fullName>
    <label>Short URL</label>
    <type>Url</type>
</CustomField>