force-app/main/default/objects/Email_SMS_Log__c/fields/Blank_Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Blank_Short_URL__c</fullName>
    <formula>ISBLANK( Bitly__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Short URL</label>
    <type>Checkbox</type>
</CustomField>