force-app/main/default/objects/Email_SMS_Log__c/fields/Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Call_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relate to Call Line object</description>
    <label>Call Line</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>