force-app/main/default/objects/Email_SMS_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>