force-app/main/default/objects/Email_SMS_Log__c/fields/Case_List__c.field-meta.xml
<CustomField>
    <fullName>Case_List__c</fullName>
    <description>List of case number associated with the Email Sms Log</description>
    <inlineHelpText>List of case number associated with the Email Sms Log</inlineHelpText>
    <label>Case List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>