force-app/main/default/objects/Email_SMS_Log__c/fields/Case_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Date__c</fullName>
    <formula>Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Open Date</label>
    <type>DateTime</type>
</CustomField>