force-app/main/default/objects/Email_SMS_Log__c/fields/Case_Type_Remark__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Remark__c</fullName>
    <label>Case Type Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>