force-app/main/default/objects/Email_SMS_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICF</fullName>
            </value>
            <value>
                <fullName>Thanks Note</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Reminder CMU</fullName>
            </value>
            <value>
                <fullName>Ereciept-AMFS</fullName>
            </value>
            <value>
                <fullName>BookingCall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>