force-app/main/default/objects/Email_SMS_Log__c/fields/Claim_Policy_Priority__c.field-meta.xml
<CustomField>
    <fullName>Claim_Policy_Priority__c</fullName>
    <label>Claim Policy Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>