force-app/main/default/objects/Email_SMS_Log__c/fields/Claim_Susp_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Claim_Susp_Fraud__c</fullName>
    <label>Claim Susp/Fraud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>