force-app/main/default/objects/Email_SMS_Log__c/fields/Claim_Suspicious__c.field-meta.xml
<CustomField>
    <fullName>Claim_Suspicious__c</fullName>
    <label>Claim Suspicious</label>
    <length>10</length>
    <type>Text</type>
</CustomField>