force-app/main/default/objects/Email_SMS_Log__c/fields/Claim_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Transaction_Type__c</fullName>
    <label>Claim Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashless</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>