force-app/main/default/objects/Email_SMS_Log__c/fields/Claim_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type_Code__c</fullName>
    <label>Claim Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>