force-app/main/default/objects/Email_SMS_Log__c/fields/Complaint_Desicion__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Desicion__c</fullName>
    <formula>TEXT(Case__r.Complaint_Decision_AMFS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Desicion</label>
    <type>Text</type>
</CustomField>