force-app/main/default/objects/Email_SMS_Log__c/fields/Contact_Gender__c.field-meta.xml
<CustomField>
    <fullName>Contact_Gender__c</fullName>
    <formula>IF(NOT(ISBLANK( Contact__r.WelcomeCall_GenderName__c )),  Contact__r.WelcomeCall_GenderName__c  , &apos;Bapak/Ibu&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Gender</label>
    <type>Text</type>
</CustomField>