force-app/main/default/objects/Email_SMS_Log__c/fields/Contact_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Short_Name__c</fullName>
    <label>Contact Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>