force-app/main/default/objects/Email_SMS_Log__c/fields/Date_of_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Approved__c</fullName>
    <description>C DOA dari RLS</description>
    <label>Date of Approved</label>
    <type>Date</type>
</CustomField>