force-app/main/default/objects/Email_SMS_Log__c/fields/Date_of_Capture__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Capture__c</fullName>
    <description>C DOC dari RLS</description>
    <label>Date of Capture</label>
    <type>Date</type>
</CustomField>