force-app/main/default/objects/Email_SMS_Log__c/fields/Date_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Payment__c</fullName>
    <description>Date Payment POS/irequest</description>
    <label>Date Payment</label>
    <type>Date</type>
</CustomField>