force-app/main/default/objects/Email_SMS_Log__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <formula>DATETIMEVALUE(MID(Date_Received_JATIS__c,7,4)+&quot;-&quot;+LEFT(Date_Received_JATIS__c,2)+&quot;-&quot;+MID(Date_Received_JATIS__c,4,2)+&quot; &quot;+IF(RIGHT(Date_Received_JATIS__c,2)==&quot;AM&quot;, IF(MID(Date_Received_JATIS__c,12,2)==&quot;12&quot;, &quot;00&quot;,MID(Date_Received_JATIS__c,12,2)),CASE(MID(Date_Received_JATIS__c,12,2),&quot;12&quot;,&quot;12&quot;,&quot;01&quot;,&quot;13&quot;,&quot;02&quot;,&quot;14&quot;,&quot;03&quot;,&quot;15&quot;,&quot;04&quot;,&quot;16&quot;,&quot;05&quot;,&quot;17&quot;,&quot;06&quot;,&quot;18&quot;,&quot;07&quot;,&quot;19&quot;,&quot;08&quot;,&quot;20&quot;,&quot;09&quot;,&quot;21&quot;,&quot;10&quot;,&quot;22&quot;,&quot;23&quot;))+&quot;:&quot;+MID(Date_Received_JATIS__c,15,5))-(7/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Received</label>
    <type>DateTime</type>
</CustomField>