force-app/main/default/objects/Email_SMS_Log__c/fields/Date_Received_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_JATIS__c</fullName>
    <label>Date Received JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>