force-app/main/default/objects/Email_SMS_Log__c/fields/Department_Owner__c.field-meta.xml
<CustomField>
    <fullName>Department_Owner__c</fullName>
    <label>Department Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>