force-app/main/default/objects/Email_SMS_Log__c/fields/Description_Status_Deliver__c.field-meta.xml
<CustomField>
    <fullName>Description_Status_Deliver__c</fullName>
    <formula>CASE( Status_Deliver__c , &apos;1&apos;, &apos;Success, received. The SMS received on the Destination Number&apos;, &apos;2&apos;, &apos;Success, not received. The SMS sent successfully to Telco but not received&apos;,&apos;3&apos;,&apos;Success, unknown number. The Destination Number is not valid&apos;,&apos;4&apos;,&apos;Failed SMS submission failed&apos;,&apos;77&apos;,&apos;Delivery Status is not available. The Delivery Status of requested Message Id currently not available Delivery Status available in 1 to 3 days after SMS submission&apos;,&apos;&apos;)</formula>
    <label>Description Status Deliver</label>
    <type>Text</type>
</CustomField>