force-app/main/default/objects/Email_SMS_Log__c/fields/Description_Status_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Description_Status_JATIS__c</fullName>
    <formula>CASE( Status_JATIS__c, &apos;1&apos;, &apos;Success&apos;, &apos;2&apos;, &apos;Missing Parameter&apos;, &apos;3&apos;, &apos;Invalid User Id or Password &apos;, &apos;4&apos;, &apos;Invalid Message&apos;, &apos;5&apos;, &apos;Invalid MSISDN&apos;, &apos;6&apos;, &apos;Invalid Sender&apos;, &apos;7&apos;, &apos;Client’s IP Address is not allowed&apos;, &apos;8&apos;, &apos;Internal Server Error&apos;, &apos;9&apos;, &apos;Invalid division&apos;, &apos;20&apos;, &apos;Invalid Channel&apos;, &apos;21&apos;, &apos;Token Not Enough&apos;, &apos;22&apos;,&apos;Token Not Available&apos;,&apos;&apos;)</formula>
    <label>Description Status JATIS</label>
    <type>Text</type>
</CustomField>