force-app/main/default/objects/Email_SMS_Log__c/fields/EIP_Response__c.field-meta.xml
<CustomField>
    <fullName>EIP_Response__c</fullName>
    <label>EIP Response</label>
    <type>TextArea</type>
</CustomField>