force-app/main/default/objects/Email_SMS_Log__c/fields/Email_SMS_Length__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Length__c</fullName>
    <label>Email/SMS Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>