force-app/main/default/objects/Email_SMS_Log__c/fields/Email_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email &amp; SMS Template</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>