force-app/main/default/objects/Email_SMS_Log__c/fields/Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Text__c</fullName>
    <label>Email/SMS Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>