force-app/main/default/objects/Email_SMS_Log__c/fields/Exclude_From2__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From2__c</fullName>
    <formula>IF (CONTAINS(Exclude_From__c, &apos;Freeze until&apos;), &apos;Freeze until&apos;, Exclude_From__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude From2</label>
    <type>Text</type>
</CustomField>