force-app/main/default/objects/Email_SMS_Log__c/fields/Exclude_From__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From__c</fullName>
    <label>Exclude From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>