force-app/main/default/objects/Email_SMS_Log__c/fields/Ext_ID_IDAS__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID_IDAS__c</fullName>
    <externalId>true</externalId>
    <label>Ext ID - IDAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>