force-app/main/default/objects/Email_SMS_Log__c/fields/Fg_Update_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fg_Update_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Update Contact</label>
    <type>Checkbox</type>
</CustomField>