force-app/main/default/objects/Email_SMS_Log__c/fields/First_Send__c.field-meta.xml
<CustomField>
    <fullName>First_Send__c</fullName>
    <label>First Send</label>
    <type>Date</type>
</CustomField>