force-app/main/default/objects/Email_SMS_Log__c/fields/First_Send_F__c.field-meta.xml
<CustomField>
    <fullName>First_Send_F__c</fullName>
    <formula>IF (( End_Date__c &gt;= Loop_Date_1__c) &amp;&amp; !ISBLANK(Loop_Date_1__c), 

IF (ISBLANK(First_Send__c), Loop_Date_1__c - 6, First_Send__c)

, End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Send_F</label>
    <type>Date</type>
</CustomField>