force-app/main/default/objects/Email_SMS_Log__c/fields/Flag_Clean_Case__c.field-meta.xml
<CustomField>
    <fullName>Flag_Clean_Case__c</fullName>
    <formula>IF(
 AND(
  NOT(
   ISNULL(Date_of_Approved__c)
  ), 
  NOT(
   ISNULL(Date_of_Approved__c)
  )
 ),
 IF(Date_of_Approved__c - Date_of_Capture__c &lt;= 1, &apos;Clean Case&apos;, &apos;Non Clean Case&apos;),
 &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag Clean Case</label>
    <type>Text</type>
</CustomField>