force-app/main/default/objects/Email_SMS_Log__c/fields/FlagTestClass__c.field-meta.xml
<CustomField>
    <fullName>FlagTestClass__c</fullName>
    <label>FlagTestClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>