force-app/main/default/objects/Email_SMS_Log__c/fields/Follow_Up_ICF__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_ICF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up ICF</label>
    <type>Checkbox</type>
</CustomField>