force-app/main/default/objects/Email_SMS_Log__c/fields/Have_Email_SMS_Log__c.field-meta.xml
<CustomField>
    <fullName>Have_Email_SMS_Log__c</fullName>
    <formula>IF(TEXT(Status__c) == &apos;Cancel&apos;,&apos;Cancel&apos;,&apos;SEND&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Have Email &amp; SMS Log</label>
    <type>Text</type>
</CustomField>