force-app/main/default/objects/Email_SMS_Log__c/fields/ICF_Non_CCC__c.field-meta.xml
<CustomField>
    <fullName>ICF_Non_CCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICF Non CCC</label>
    <referenceTo>ICF_Non_CCC__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>