force-app/main/default/objects/Email_SMS_Log__c/fields/ICF_Walk_IN__c.field-meta.xml
<CustomField>
    <fullName>ICF_Walk_IN__c</fullName>
    <formula>IF ( AND( TEXT(Case__r.Origin ) == &apos;Walk-In&apos;, DATEVALUE(Case__r.CreatedDate) == TODAY() ),
 HYPERLINK(Survey_URL__c, &quot;Here&quot; )
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICF Walk-IN</label>
    <type>Text</type>
</CustomField>