force-app/main/default/objects/Email_SMS_Log__c/fields/is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>is_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Eligible</label>
    <type>Checkbox</type>
</CustomField>