force-app/main/default/objects/Email_SMS_Log__c/fields/Kode_Rumah_Sakit__c.field-meta.xml
<CustomField>
    <fullName>Kode_Rumah_Sakit__c</fullName>
    <label>Kode Rumah Sakit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>