force-app/main/default/objects/Email_SMS_Log__c/fields/Log_Book_Activity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Activity_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Book Activity Detail</label>
    <referenceTo>Log_Book_Activitiy_Detail__c</referenceTo>
    <relationshipLabel>Email &amp; SMS Log</relationshipLabel>
    <relationshipName>Email_SMS_Log</relationshipName>
    <type>Lookup</type>
</CustomField>