force-app/main/default/objects/Email_SMS_Log__c/fields/Loop__c.field-meta.xml
<CustomField>
    <fullName>Loop__c</fullName>
    <formula>IF (
NOT (
ISBLANK( Loop_Date_1__c ) &amp;&amp;
ISBLANK( Loop_Date_2__c ) &amp;&amp;
ISBLANK( Loop_Date_3__c )
)
,  Request_Date__c !=  End_Date__c , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loop</label>
    <type>Checkbox</type>
</CustomField>