force-app/main/default/objects/Email_SMS_Log__c/fields/Loop_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Loop_Date_1__c</fullName>
    <label>Loop Date 1</label>
    <type>Date</type>
</CustomField>