force-app/main/default/objects/Email_SMS_Log__c/fields/Loop_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Loop_Date_3__c</fullName>
    <label>Loop Date 3</label>
    <type>Date</type>
</CustomField>