force-app/main/default/objects/Email_SMS_Log__c/fields/MessageId_JATIS__c.field-meta.xml
<CustomField>
    <fullName>MessageId_JATIS__c</fullName>
    <label>MessageId JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>