force-app/main/default/objects/Email_SMS_Log__c/fields/Mobile_Fix__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Fix__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( Mobile__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)
, &quot;+62&quot;, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile_Fix</label>
    <type>Text</type>
</CustomField>