force-app/main/default/objects/Email_SMS_Log__c/fields/Mobile_Fix_Check__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Fix_Check__c</fullName>
    <formula>ISNUMBER(Mobile_Fix__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile_Fix_Check</label>
    <type>Checkbox</type>
</CustomField>