force-app/main/default/objects/Email_SMS_Log__c/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <label>MOT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I Ask</fullName>
            </value>
            <value>
                <fullName>I Buy</fullName>
            </value>
            <value>
                <fullName>I Claim</fullName>
            </value>
            <value>
                <fullName>I Renew</fullName>
            </value>
            <value>
                <fullName>I Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>