force-app/main/default/objects/Email_SMS_Log__c/fields/Nama_Rumah_Sakit__c.field-meta.xml
<CustomField>
    <fullName>Nama_Rumah_Sakit__c</fullName>
    <label>Nama Rumah Sakit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>