force-app/main/default/objects/Email_SMS_Log__c/fields/Namespace_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Namespace_JATIS__c</fullName>
    <label>Namespace JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>