force-app/main/default/objects/Email_SMS_Log__c/fields/Negative_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Negative_Feedback__c</fullName>
    <formula>Survey_Taken__r.Negative_Feedback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Feedback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>