force-app/main/default/objects/Email_SMS_Log__c/fields/Not_Response__c.field-meta.xml
<CustomField>
    <fullName>Not_Response__c</fullName>
    <formula>ISBLANK(Response_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Response</label>
    <type>Checkbox</type>
</CustomField>