force-app/main/default/objects/Email_SMS_Log__c/fields/Password_JATIS__c.field-meta.xml
<CustomField>
    <fullName>Password_JATIS__c</fullName>
    <label>Password JATIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>