force-app/main/default/objects/Email_SMS_Log__c/fields/Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Code__c</fullName>
    <label>Payment Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>