force-app/main/default/objects/Email_SMS_Log__c/fields/Product_Code_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Plan__c</fullName>
    <formula>Contact__r.WelcomeCall_Product_Code_Plan__c</formula>
    <label>Product Code Plan</label>
    <type>Text</type>
</CustomField>