force-app/main/default/objects/Email_SMS_Log__c/fields/Qualtrics_Body__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Body__c</fullName>
    <label>Qualtrics Body</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>