force-app/main/default/objects/Email_SMS_Log__c/fields/Qualtrics_Code__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Code__c</fullName>
    <label>Qualtrics Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>