force-app/main/default/objects/Email_SMS_Log__c/fields/Qualtrics_Message__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Message__c</fullName>
    <label>Qualtrics Message</label>
    <type>TextArea</type>
</CustomField>