force-app/main/default/objects/Email_SMS_Log__c/fields/Qualtrics_Request__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Request__c</fullName>
    <label>Qualtrics Request</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>