force-app/main/default/objects/Email_SMS_Log__c/fields/Qualtrics_URL__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_URL__c</fullName>
    <label>Qualtrics URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>