force-app/main/default/objects/Email_SMS_Log__c/fields/Ready_To_Send__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Send</label>
    <type>Checkbox</type>
</CustomField>