force-app/main/default/objects/Email_SMS_Log__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <formula>Survey_Taken__r.CreatedDate + (7/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>