force-app/main/default/objects/Email_SMS_Log__c/fields/retry_status_delivery__c.field-meta.xml
<CustomField>
    <fullName>retry_status_delivery__c</fullName>
    <inlineHelpText>if Status Delivery == 2, will be retry get status.
max 4x retry</inlineHelpText>
    <label>retry get status delivery</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>