force-app/main/default/objects/Email_SMS_Log__c/fields/Send_Admin_Flag__c.field-meta.xml
<CustomField>
    <fullName>Send_Admin_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Redirect all contact email to admin email (for testing purposes only)
Hard Go Live, 21 Maret 2017.
22 Maret 2017, tutup dahulu</description>
    <inlineHelpText>Redirect all contact email to admin email (for testing purposes only)</inlineHelpText>
    <label>Send Admin</label>
    <type>Checkbox</type>
</CustomField>