force-app/main/default/objects/Email_SMS_Log__c/fields/Send_Flag__c.field-meta.xml
<CustomField>
    <fullName>Send_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Flag</label>
    <type>Checkbox</type>
</CustomField>